fix: prevent horizontal overflow on body

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 
 body {
 	font-family: "DM Sans";
+  overflow-x: hidden;
 }
 
 h1 {
